--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,13 +5,9 @@
 # we use builddir/src for the generated include files to get found
 
 # Optional python bindings
-if ENABLE_PYTHON_BINDING
-if HAVE_PYTHON
-if WITH_PYTHON_BINDING
+if WITH_PYTHON
   TEST_PYTHON_SCRIPT = test_python.py
   TEST_PYTHON_ENV    = PYTHONPATH=$(top_builddir)/pyext/build:$(pythondir):$(PYTHONPATH)
-endif
-endif
 endif
 
 # Include directories
