add cspull and create only symbolic links in bin directory

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -1,21 +1,21 @@
 ## Process this file with automake to produce Makefile.in
 
-# Scripts to be distributed in bindir
-binscripts = cssens
+# Scripts for which symbolic links should be created in bindir
+binscripts = cspull cssens
 
 # Scripts to be distributed in pythondir
-pythonscripts = obsutils.py
+pythonscripts = cspull.py cssens.py obsutils.py
 
 # Distribute scripts
-EXTRA_DIST         = $(binscripts) $(pythonscripts)
-binscriptsdir      = $(bindir)
-binscripts_DATA    = $(binscripts)
+EXTRA_DIST         = $(pythonscripts)
 pythonscriptsdir   = $(pythondir)
 pythonscripts_DATA = $(pythonscripts)
 
-# Add hook rule to make binscripts executable
+# Add hook rule to create symbolic links for cscripts
 install-data-hook:
-	@list='$(binscripts_DATA)';\
+	@list='$(binscripts)';\
 	for p in $$list; do \
+      ln -s "$(DESTDIR)$(pythondir)/$$p.py" "$(DESTDIR)$(bindir)/$$p"; \
 	  if test -f "$$p"; then chmod +x "$(DESTDIR)$(binscriptsdir)/$$p"; fi; \
+	  chmod +x "$(DESTDIR)$(pythondir)/$$p.py"; \
 	done
