remove unused bin directory

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,9 +7,8 @@
 # Optional python bindings
 if WITH_PYTHON
   TEST_CSCRIPTS      = test_cscripts.sh
-  TEST_CSCRIPTS_BIN  = PATH=$(top_builddir)/scripts:$(PATH)
   TEST_PYTHON_SCRIPT = test_python.py
-  TEST_PYTHON_ENV    = PYTHONPATH=$(top_builddir)/pyext/build:$(pythondir):$(top_builddir)/scripts:$(PYTHONPATH)
+  TEST_PYTHON_ENV    = PYTHONPATH=$(top_builddir)/pyext/build:$(top_builddir)/scripts:$(pythondir):$(PYTHONPATH)
 endif
 
 # Include directories
@@ -22,7 +21,7 @@ INCLUDES = -I$(top_srcdir)/include \
 # Set test environment
 TESTS_ENVIRONMENT = LD_LIBRARY_PATH=$(top_builddir)/src/.libs:$(prefix)/lib:$(LD_LIBRARY_PATH) \
                     PATH=$(top_builddir)/src/ctobssim:$(top_builddir)/src/ctbin:$(top_builddir)/src/ctselect:$(top_builddir)/src/ctlike:$(PATH) \
-                    $(TEST_PYTHON_ENV) $(TEST_CSCRIPTS_BIN)
+                    $(TEST_PYTHON_ENV)
 
 # Tests (these are the tests to be executed)
 TESTS = test_ctools.sh \
