--- a/src/ctselect/Makefile.am
+++ b/src/ctselect/Makefile.am
@@ -1,14 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-# we use srcdir/src for "private" includes
-# we use srcdir/include for the static global include files
-# we use builddir/src for the generated include files to get found
-
-# Include directories
-INCLUDES = -I$(top_srcdir)/include \
-           -I$(top_builddir)/src \
-           -I$(top_srcdir)/src
-
 # Program name
 bin_PROGRAMS = ctselect
 
@@ -20,9 +11,10 @@ noinst_LTLIBRARIES = libctselect.la
 libctselect_la_SOURCES = $(sources)
 
 # Program definition
-ctselect_SOURCES = main.cpp $(sources)
+ctselect_SOURCES = main.cpp
 ctselect_LDFLAGS = $(LIB_LINK_OPTION) @LDFLAGS@
 ctselect_CPPFLAGS = @CPPFLAGS@
+ctselect_LDADD = libctselect.la
 
 # Parameter files
 pfilesdir = $(prefix)/syspfiles
