--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,3 +1,11 @@
 ## Process this file with automake to produce Makefile.in
 
-# Examples
+# Scripts to be distributed
+scripts = ts_distributions.py
+
+# Set directories
+scriptsdir   = $(datadir)/examples/python
+scripts_DATA = $(scripts)
+
+# Extra files to be distributed in the tar file
+EXTRA_DIST = $(scripts)
