make sure that test_csripts.sh is executable

--- a/configure.ac
+++ b/configure.ac
@@ -329,7 +329,6 @@ AC_CONFIG_FILES([Makefile
                  src/ctobssim/Makefile
                  src/ctatools-setup
                  test/Makefile
-                 test/test_cscripts.sh
                  pyext/Makefile
                  pyext/setup.py
                  caldb/Makefile
@@ -337,6 +336,7 @@ AC_CONFIG_FILES([Makefile
                  examples/Makefile
                  scripts/Makefile
                  ctatools.pc])
+AC_CONFIG_FILES([test/test_cscripts.sh], [chmod +x test/test_cscripts.sh])
 AC_OUTPUT
 
 
